--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.container {
+    max-width: 100%;
+}
+
+h1 > a {
+    pointer-events: none;
+    cursor: default;
+}
+
+.logos img {
+    max-height: 200px;
+}
